build_errors.log
    Checking windows v0.58.0
    Checking accesskit_windows v0.24.1
    Checking accesskit_winit v0.23.1
    Checking egui-winit v0.30.0
    Checking eframe v0.30.0
    Checking MicMuteRs v0.1.0 (C:\Users\papop\Desktop\TaskScheduler\MicMuteRs)
error[E0609]: no field `Anonymous` on type `windows_core::PROPVARIANT`
   --> src\audio.rs:145:41
    |
145 | ...                   if prop_var.Anonymous.Anonymous.vt == 31 { // VT_LPWSTR
    |                                   ^^^^^^^^^ unknown field

error[E0609]: no field `Anonymous` on type `windows_core::PROPVARIANT`
   --> src\audio.rs:146:53
    |
146 | ...                   let pwsz = prop_var.Anonymous.Anonymous.Anonymous.pwszVal;
    |                                           ^^^^^^^^^ unknown field

error[E0308]: mismatched types
  --> src\utils.rs:26:22
   |
26 |                 Some(&mut vtype),
   |                 ---- ^^^^^^^^^^ expected `*mut REG_VALUE_TYPE`, found `&mut {integer}`
   |                 |
   |                 arguments to this enum variant are incorrect
   |
   = note:    expected raw pointer `*mut REG_VALUE_TYPE`
           found mutable reference `&mut {integer}`
help: the type constructed contains `&mut {integer}` due to the type of the argument passed
  --> src\utils.rs:26:17
   |
26 |                 Some(&mut vtype),
   |                 ^^^^^----------^
   |                      |
   |                      this argument influences the type of `Some`
note: tuple variant defined here
  --> /rustc/01f6ddf7588f42ae2d7eb0a2f21d44e8e96674cf\library\core\src\option.rs:608:5

error[E0599]: no method named `is_ok` found for struct `BOOL` in the current scope
  --> src\utils.rs:48:46
   |
48 |         if GetLastInputInfo(&mut last_input).is_ok() {
   |                                              ^^^^^ method not found in `BOOL`

warning: unused variable: `class`
   --> src\gui.rs:188:76
    |
188 |             ctx.show_viewport_immediate(overlay_id, overlay_builder, |ctx, class| {
    |                                                                            ^^^^^ help: if this is intentional, prefix it with an underscore: `_class`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `arguments`
  --> src\startup.rs:73:9
   |
73 |     let arguments = format!("\"{}\"", exe_str);
   |         ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_arguments`

Some errors have detailed explanations: E0308, E0599, E0609.
For more information about an error, try `rustc --explain E0308`.
warning: `MicMuteRs` (bin "MicMuteRs") generated 2 warnings
error: could not compile `MicMuteRs` (bin "MicMuteRs") due to 4 previous errors; 2 warnings emitted
